# cell-filter

./: .gitignore  PROJECT.md  README.md  count_cells.py  data  pyproject.toml  train_model.py
docs/: commands.md  programming_rules.md
scripts/: analyze.py  extract.py  filter.py  pattern.py
src/cell_counter/: __init__.py  model.py  train.py
src/cell_counter/cli/: analyze.py  count.py  extract.py  generate.py  inference.py  info.py  load_data.py  overlay.py  show_labels.py  test.py  threshold.py  time_series.py  train.py
src/cell_counter/core/: Analyzer.py  CellGenerator.py  CellposeCounter.py  Extractor.py  InfoDisplayer.py  OverlayCreator.py  __init__.py  cell_generator.py  count.py  extract.py  generate.py  inference.py  info.py  load_data.py  show_labels.py  time_series.py  train.py
src/cell_counter/core/abc/: BaseBatchAnalyzer.py  BaseCounterABC.py  BaseImageHandlerABC.py  BaseImageLoader.py  BaseNucleiCounter.py  BasePatternCropper.py  BasePatternLocator.py  BaseSingleAnalyzer.py  ChannelOverlayerABC.py  ConfigHandlerABC.py  CounterABC.py  FrameExtractorABC.py  ImageHandlerABC.py  PatternCropperABC.py  SeriesAnalyzerABC.py
src/cell_counter/core/counters/: CellposeCounter.py  Counter.py  SimpleCounter.py  (+1 more)
src/cell_counter/data/: __init__.py  cell_generator.py
src/cell_counter/notebooks/: cellpose.ipynb  n-cells.ipynb  nd2reader.ipynb  presentation.ipynb
src/cell_counter/utils/: dataloader.py  parse_labels.py
src/cell_filter/cli/: __init__.py  analysis.py  analyze.py  extract.py  filtering.py  info.py  pattern.py
src/cell_filter/core/: Analyzer.py  CellGenerator.py  CellposeCounter.py  Extractor.py  InfoDisplayer.py  __init__.py  analyze.py  count.py  crop.py  extract.py  filter.py  generate.py  pattern.py
src/cell_filter/extract/: core.py  main.py
src/cell_filter/filter/: core.py  main.py
src/cell_filter/notebooks/: presentation.ipynb
src/cell_filter/pattern/: core.py  main.py
src/cell_filter/utils/: __init__.py  gpu_utils.py  nd2_utils.py  nikon.py
tests/: test_imagehandler.py
(+4 files in other folders)
