[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cell-counter"
version = "1.2.0"
description = "Filtering micropatterned timelapse microscopy images based on number of cells"
authors = [
    {name = "Tianyi Cao", email = "ctyjackcao@outlook.com"},
]
dependencies = [
    "numpy==1.26.4",
    "torch==2.7.0",
    "imageio==2.37.0",
    "matplotlib==3.10.1",
    "opencv-python==4.11.0.86",
    "cellpose==3.1.1.2",
    "nd2reader==3.3.1",
]
requires-python = "3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.hatch.build.targets.wheel]
packages = ["src/cell_counter"] 
