[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cell-filter"
version = "2.0.0"
description = "Filtering micropatterned timelapse microscopy images based on number of cells"
authors = [{ name = "Tianyi Cao", email = "ctyjackcao@outlook.com" }]
dependencies = [
    "numpy",
    "torch",
    "matplotlib",
    "opencv-python",
    "cellpose>4",
    "nd2",
    "xarray",
    "dask",
    "scikit-image",
    "scipy",
    "tifffile",
    "networkx",
    "pyyaml"
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.hatch.build.targets.wheel]
packages = ["src/cell_filter"]
